Added welcome screen and welcome animation.
Fixed some bugs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">SimpleImageApp</string>
-    <string name="description_defalt">Just a default description of some photo that you can see above this info card. It can be really big, but now it is just a little description for test</string>
+    <string name="description_default">Just a default description of some photo that you can see above this info card. It can be really big, but now it is just a little description for test</string>
     <string name="retry">Retry</string>
     <string name="no_result">No result found for this query</string>
     <string name="cannot_loaded">Results couldn\'t be loaded</string>
